Bug 890279 - Create ScrollInfoLayers for frames we want APZC support. r=kats